--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
